--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 timezone:    Europe/Berlin
 future:      false
 # Set baseurl to the base path of the site eg "/mytalk"
-baseurl:     "/caption-this"
+baseurl:     "/20240409-ghdev-providence"
 # The allowed values are 'rouge', 'pygments' or null.
 highlighter: rouge
 # markdown - Valid options are [ maruku | rdiscount | kramdown | redcarpet ]
@@ -17,7 +17,7 @@ plugins:
   - jemoji
 
 ## personalize your slide show
-title:       caption-this
+title:       20240409-ghdev-providence
 author:      GitHubTeacher
 description: A fun activity for learning Git and GitHub.
 
